# Algorithmic-Trading

./: .gitignore
001-OrderBook/01-OrderBookStructureMechanism/: orderBook.cpp  orderBook.hpp
001-OrderBook/02-GetOrderBookThroughAPI/01-WithAlphaVantageAPI/: orderbookWithAlphaVantageAPI.py
001-OrderBook/03-StreamAndArchiveRealTimeL2OrderBook/: streamRealTimeL2OrderBook.ipynb  uniusdt_orderbook_snapshot_2025-11-05.json  uniusdt_orderbook_snapshot_2025-11-05.txt  uniusdt_orderbook_updates_2025-10-28.txt  uniusdt_orderbook_updates_2025-11-05.json  uniusdt_orderbook_updates_2025-11-05.txt
001-OrderBook/04-OrderbookImbalancesInOrderbookSnapshot/: orderbookImbalancesInOrderbookSnapshot.ipynb
001-OrderBook/05-OrderbookLiveVisualization/: orderbookLiveVisualization.py
001-OrderBook/06-OrderbookMarketMicrostructure/01-BidAskSpread/: bidAskSpread.ipynb
001-OrderBook/06-OrderbookMarketMicrostructure/02-SlippageAndMarketImpact/: slippageAndMarketImpact.ipynb
001-OrderBookStructureMechanism/01-OrderBook/: orderBook.cpp  orderBook.hpp
001-TradingEngineStructureMechanism/01-TradingEngineServer/: CMakeLists.txt  README.md
001-TradingEngineStructureMechanism/01-TradingEngineServer/core/include/TradingEngineServer/core/: Application.h  TradingEngineServer.h  TradingEngineServerInterface.h
001-TradingEngineStructureMechanism/01-TradingEngineServer/core/src/: Application.cpp  TradingEngineServer.cpp
001-TradingEngineStructureMechanism/01-TradingEngineServer/server/src/: main.cpp
002-MarketTechnicalAnalysisTAFundamentals/01-ChartTypes/01-LineChart/: lineChart.ipynb
(+7 files in other folders)
